# html2sauron

./: Cargo.toml  deploy.sh  index.html  install.sh  serve.sh  some.html
crates/sauron-syntax/: Cargo.toml
crates/sauron-syntax/src/: lib.rs  to_syntax.rs
src/: attributes.rs  lib.rs  main.rs  tags.rs
