
[package]
name = "html2sauron"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = "0.43"
sauron-syntax = { version = "0.1", path = "crates/sauron-syntax" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.3", optional = true }
log = "0.4"
console_log = "0.1"


[workspace]
members = [
    "crates/sauron-syntax",
]

[patch.crates-io]
sauron-markdown = { path = "../sauron-markdown" }
